<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="0dp"
        style="@style/CardView.DayNight"
        app:contentPaddingTop="10dp"
        app:contentPaddingBottom="10dp"
        android:layout_marginHorizontal="16dp"
        android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameView"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp" />

        <CheckBox
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_weight="0" />
    </LinearLayout>

</androidx.cardview.widget.CardView>