<resources>
    <!-- <string name="app_name">horizon-lite</string> -->
    <string name="app_name">Sunset</string>
    <string name="streak">streak</string>
    <string name="highscore">highscore</string>
    <string name="last_updated">lastUpdated</string>
    <string name="increase_streak">increaseStreak</string>
    <string name="streak_task_date">"streakTaskDate"</string>
    <string name="today_at_least_one_completed">"todayAtLeastOneCompleted"</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="congratulation_complete">Well Done! All tasks completed today.</string>
    <string name="google_play_store_listing">https://play.google.com/store/apps/details?id=com.innerCat.sunrise&amp;reviewId=0</string>
    <string name="update_1_dot_1"><![CDATA[<b>New Features</b><br>- A shiny new homescreen widget allows you to see all of today\'s tasks at a glance<br>- You can now schedule tasks for tomorrow<br><br><b>Improvements</b><br>- Archive now shows if a completed task was from today or how many times it has been repeated in the past<br>- Choose in preferences whether, when adding a task, the first letter entered should be automatically capitalized<br>- The add button now disappears once you\'re adding a task<br>- Tapping the streak flame now shows your best ever streak<br><br><b>Tweaks</b><br>- Updated design<br><br><b>Bugfixes</b><br>- Fixed a bug where immediately closing the app after replaying a task would mean the task was not replayed<br>- Fixed bugs where empty tasks could be created and edited<br><br>If you have any bug reports or feature requests, feel free to leave a review or post an issue on our [GitHub repository](https://github.com/isaacy2012/Sunset).<br><br>Thanks for using Sunset!]]></string>
</resources>